--- a/WebShopREST/WebShopREST/WebContent/login.html
+++ b/WebShopREST/WebShopREST/WebContent/login.html
@@ -7,17 +7,15 @@
 </head>
 <body>
     <div class="center">
-        <input type="checkbox" id="show"/>
-        <label for="show" class="show-btn">Vidi formu</label>
         <div class="container">
             <div class="text">Prijava</div>
             <form action="#">
                 <div class="data">
-                    <label>Email</label>
+                    <label>Korisničko ime *</label>
                     <input type="text" required/>
                 </div>
                 <div class="data">
-                    <label>Lozinka</label>
+                    <label>Lozinka *</label>
                     <input type="password" required/>
                 </div>
                 <div class="forgot-pass"><a href="#">Zaboravili ste lozinku?</a></div>
