forme za registraciju menadžera i dobavljača

--- a/WebShopREST/WebShopREST/WebContent/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/administrator.html
@@ -10,7 +10,7 @@
 		<h1 id="titleText">WebShop</h1>
 	</header>
 	
-	<div id="restaurantsRectangle">
+	<div id="usersRectangle">
 		<div>
 			<br />
 			<label id="korisniciText">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspKorisnici</label>
@@ -55,6 +55,8 @@
 					<th>Korisničko ime</th>
 					<th>Ime</th> 
 					<th>Prezime</th>
+					<th>Pol</th> 
+					<th>Datum rođenja</th>
 					<th>Lozinka</th>
 					<th>Uloga</th>
 					<th>Broj bodova</th>
@@ -66,6 +68,8 @@
 					<td>pero</td>
 					<td>Pero</td>
 					<td>Perić</td>
+					<td>Muško</td> 
+					<td>10.10.1990.</td>
 					<td>123</td>
 					<td>Menadžer</td>
 					<td>-</td>
@@ -74,6 +78,8 @@
 					<td>mica</td>
 					<td>Milica</td>
 					<td>Tomić</td>
+					<td>Žensko</td> 
+					<td>5.5.1995.</td>
 					<td>456</td>
 					<td>Kupac</td>
 					<td>2500</td>
@@ -82,6 +88,8 @@
 					<td>petar</td>
 					<td>Petar</td>
 					<td>Petrović</td>
+					<td>Muško</td> 
+					<td>15.2.1993.</td>
 					<td>789</td>
 					<td>Dostavljač</td>
 					<td>-</td>
@@ -90,6 +98,8 @@
 					<td>stefo</td>
 					<td>Stefan</td>
 					<td>Savić</td>
+					<td>Muško</td> 
+					<td>25.12.2002.</td>
 					<td>stefke</td>
 					<td>Kupac</td>
 					<td>5500</td>
@@ -98,6 +108,8 @@
 					<td>mara</td>
 					<td>Mara</td>
 					<td>Marić</td>
+					<td>Žensko</td> 
+					<td>20.2.1976.</td>
 					<td>12345</td>
 					<td>Administrator</td>
 					<td>-</td>
