otkomentarisan jquery za login i register

--- a/WebShopREST/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebShopREST/WebContent/index.html
@@ -15,7 +15,7 @@
 			<label id="promoText">&nbsp&nbsp&nbspDobrodošli na mesto</label>
 			<button class="signInBtns" id="loginBtn">Prijava</button>
 			<button class="signInBtns" id="registerBtn">Registracija</button>
-			<label id="promoText2"><br>&nbsp&nbsp&nbsp&nbspgde i bake kupuju!</label>
+			<label id="promoText"><br>&nbsp&nbsp&nbsp&nbspgde i bake kupuju!</label>
 		</div>
 		<br>
 		<br>
@@ -92,7 +92,7 @@
 		</table>
 	</div>
 
-	<!-- <script>
+	<script>
 		$(document).ready(function(){
 			$('#registerBtn').click(function(){
 				window.location.href='register.html';
@@ -101,6 +101,6 @@
 				window.location.href='login.html';
 			});
 		});
-	</script> -->
+	</script>
 </body>
 </html>
