menadzer i dobavljac strane

--- a/WebShopREST/WebShopREST/WebContent/register.html
+++ b/WebShopREST/WebShopREST/WebContent/register.html
@@ -27,15 +27,15 @@
                     <input type="text" required/>
                 </div>
                 <div class="data">
-                    <label>Pol</label>
-                    <select>
+                    <label>Pol *</label>
+                    <select required>
                         <option>Muški</option>
                         <option>Ženski</option>
                     </select>
                 </div>
                 <div class="data">
-                    <label>Datum rođenja</label>
-                    <input type="text"/>
+                    <label>Datum rođenja *</label>
+                    <input type="date" required/>
                 </div>
                 <div class="btn">
                     <div class="inner"></div>
