--- a/WebShopREST/WebShopREST/WebContent/delivererRegister.html
+++ b/WebShopREST/WebShopREST/WebContent/delivererRegister.html
@@ -9,45 +9,43 @@
 	<header id="titleRectangle">
 		<h1 id="titleText">WebShop</h1>
 	</header>
-	
-	<div id="registerRectangle">
-		<label id="formTitle">Registracija Dobavljača</label>
-		<form action="#">
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Ime</label><br />
-				<input class="inputBoxes" type="text" required />
-			</div>
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Prezime</label><br />
-				<input class="inputBoxes" type="text" required />
-			</div>
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Datum rođenja</label><br />
-				<input class="inputBoxes" style="cursor: pointer;" type="date" required />
-			</div>
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Pol</label><br />
-				<select class="dropdownBoxes">
-					<option selected="selected" value="0">Muško</option>
-					<option value="1">Žensko</option>
-				</select>
-			</div>
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Korisničko ime</label><br />
-				<input class="inputBoxes" type="text" required />
-			</div>
-			<div style="margin-top: 8%; margin-left: 10%; float: left;">
-				<label class="labels">Lozinka</label><br />
-				<input class="inputBoxes" type="text" required />
-			</div>
-			<div style="margin-top: 12%; margin-left: 12%; float: left;">
-				<button class="submitBtn" type="submit">Kreiraj</button>
-			</div>
-			<div style="margin-top: 12%; margin-left: 10%; float: left;">
-				<button class="cancelBtn">Otkaži</button>
-			</div>
-			<div style="height: 140px; float: left;"></div>
-		</form>
-	</div>
+	<div class="center">
+        <div class="container">
+            <div class="text">Registracija Dobavljača</div>
+            <form action="#">
+                <div class="data">
+                    <label>Korisničko ime *</label>
+                    <input type="text" required/>
+                </div>
+                <div class="data">
+                    <label>Lozinka *</label>
+                    <input type="password" required/>
+                </div>
+                <div class="data">
+                    <label>Ime *</label>
+                    <input type="text" required/>
+                </div>
+                <div class="data">
+                    <label>Prezime *</label>
+                    <input type="text" required/>
+                </div>
+                <div class="data">
+                    <label>Pol *</label>
+                    <select required>
+                        <option>Muški</option>
+                        <option>Ženski</option>
+                    </select>
+                </div>
+                <div class="data">
+                    <label>Datum rođenja *</label>
+                    <input type="date" required/>
+                </div>
+                <div class="btn">
+                    <div class="inner"></div>
+                    <button type="submit">Registruj</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
