--- a/WebShopREST/WebShopREST/WebContent/login.html
+++ b/WebShopREST/WebShopREST/WebContent/login.html
@@ -23,7 +23,7 @@
                     <div class="inner"></div>
                     <button type="submit">Prijavi se</button>
                 </div>
-                <div class="signUp-link">Nemate nalog? <a href="#">Registrujte se sada.</a></div>
+                <div class="signUp-link">Nemate nalog? <a href="register.html">Registrujte se sada.</a></div>
             </form>
         </div>
     </div>
