--- a/WebShopREST/WebShopREST/WebContent/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/userProfile.html
@@ -32,18 +32,17 @@
                     <label class="label">Pol:</label>
                 </div>
                 <div class=datas>
-                    <input class="inputBoxes" type="text" value="Petar" disabled></label>
+                    <input class="inputBoxes" type="text" value="Petar" disabled />
                     <br>
-                    <input class="inputBoxes" type="text" value="Petrović" disabled></label>
+                    <input class="inputBoxes" type="text" value="Petrović" disabled />
                     <br>
-                    <input class="inputBoxes" type="text" value="petar" disabled></label>
+                    <input class="inputBoxes" type="text" value="petar" disabled />
                     <br>
-                    <input class="inputBoxes" type="text" value="15.2.1993." disabled></label>
+                    <input class="inputBoxes" type="text" value="15.2.1993." disabled />
                     <br>
-                    <input class="inputBoxes" type="text" value="Muško" disabled></label>
+                    <input class="inputBoxes" type="text" value="Muško" disabled />
                 </div>
-                <br>
-                <label style="color: grey; font-size: 15pt;" class="label">Da biste izmenili lozinku, idite na "Izmeni profil"</label>
+                <div style="clear: both; margin-top: 200px;"><label style="color: grey; font-size: 15pt;" class="label">Da biste izmenili lozinku, idite na "Izmeni profil"</label></div>
             </div>
         </div>
     </div>
