--- a/WebShopREST/WebShopREST/WebContent/delivererRegister.html
+++ b/WebShopREST/WebShopREST/WebContent/delivererRegister.html
@@ -9,43 +9,43 @@
 	<header id="titleRectangle">
 		<h1 id="titleText">WebShop</h1>
 	</header>
-	<div class="center">
-        <div class="container">
-            <div class="text">Registracija Dobavljača</div>
-            <form action="#">
-                <div class="data">
-                    <label>Korisničko ime *</label>
-                    <input type="text" required/>
-                </div>
-                <div class="data">
-                    <label>Lozinka *</label>
-                    <input type="password" required/>
-                </div>
-                <div class="data">
-                    <label>Ime *</label>
-                    <input type="text" required/>
-                </div>
-                <div class="data">
-                    <label>Prezime *</label>
-                    <input type="text" required/>
-                </div>
-                <div class="data">
-                    <label>Pol *</label>
-                    <select required>
-                        <option>Muški</option>
-                        <option>Ženski</option>
-                    </select>
-                </div>
-                <div class="data">
-                    <label>Datum rođenja *</label>
-                    <input type="date" required/>
-                </div>
-                <div class="btn">
-                    <div class="inner"></div>
-                    <button type="submit">Registruj</button>
-                </div>
-            </form>
-        </div>
+    <div class="container">
+        <div class="text">Registracija Dobavljača</div>
+        <form action="#">
+            <div class="data">
+                <label>Korisničko ime *</label>
+                <input type="text" required/>
+            </div>
+            <div class="data">
+                <label>Lozinka *</label>
+                <input type="password" required/>
+            </div>
+            <div class="data">
+                <label>Ime *</label>
+                <input type="text" required/>
+            </div>
+            <div class="data">
+                <label>Prezime *</label>
+                <input type="text" required/>
+            </div>
+            <div class="data">
+                <label>Pol *</label>
+                <select style="cursor: pointer;" required>
+                	<option value="">Izaberi pol</option>
+                    <option value="1">Muški</option>
+                    <option value="2">Ženski</option>
+                </select>
+            </div>
+            <div class="data">
+                <label>Datum rođenja *</label>
+                <input style="cursor: pointer;" type="date" required/>
+            </div>
+            <div class="btn">
+                <div class="inner"></div>
+                <button type="submit">Registruj</button>
+            </div>
+        </form>
     </div>
+    <div style="min-height: 20px;"></div>
 </body>
 </html>
