--- a/WebShopREST/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebShopREST/WebContent/index.html
@@ -66,7 +66,7 @@
 
 			<tbody id="tableBody">
 				<tr>
-					<td><img class="photo" src="restaurant1.jpg" alt="Slika" /></td>
+					<td><img class="photo" src="chinese.png" alt="Slika"/></td>
 					<td>Restoran 1</td>
 					<td>Batutova 5, Beograd, Srbija</td>
 					<td>Kineski</td>
@@ -74,7 +74,7 @@
 					<td>Da</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="restaurant2.jpg" alt="Slika" /></td>
+					<td><img class="photo" src="italian.png" alt="Slika" /></td>
 					<td>Restoran 2</td>
 					<td>Cara Dušana 2, Novi Sad, Srbija</td>
 					<td>Italijanski</td>
@@ -82,7 +82,7 @@
 					<td>Da</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="restaurant3.jpg" alt="Slika" /></td>
+					<td><img class="photo" src="barbeque.png" alt="Slika" /></td>
 					<td>Restoran 3</td>
 					<td>Vlaška 23, Zagreb, Hrvatska</td>
 					<td>Roštilj</td>
