--- a/WebShopREST/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebShopREST/WebContent/index.html
@@ -56,11 +56,11 @@
 			<thead>
 				<tr>
 					<th>Logo</th>
-					<th>Naziv</th>
-					<th>Lokacija</th>
-					<th>Tip</th>
-					<th>Ocena</th>
-					<th>Otvoren</th>
+					<th onclick="sortTable(0)">Naziv</th>
+					<th onclick="sortTable(1)">Lokacija</th>
+					<th onclick="sortTable(2)">Tip</th>
+					<th onclick="sortTable(3)">Ocena</th>
+					<th onclick="sortTable(4)">Otvoren</th>
 				</tr>
 			</thead>
 
@@ -116,6 +116,44 @@
 			            $(this).addClass("selected");
 			});
 		});
+
+		function sortTable(n) {
+			var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+			table = document.getElementById("restaurantsTable");
+			switching = true;
+			dir = "asc";
+			while (switching) {
+				switching = false;
+				rows = table.rows;
+				for (i = 1; i < (rows.length - 1); i++) {
+					shouldSwitch = false;
+					x = rows[i].getElementsByTagName("TD")[n];
+					y = rows[i + 1].getElementsByTagName("TD")[n];
+
+					if (dir == "asc") {
+						if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+							shouldSwitch = true;
+							break;
+						}
+					} else if (dir == "desc") {
+						if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+							shouldSwitch = true;
+							break;
+						}
+					}
+				}
+				if (shouldSwitch) {
+					rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+					switching = true;
+					switchcount ++;
+				} else {
+					if (switchcount == 0 && dir == "asc") {
+						dir = "desc";
+						switching = true;
+					}
+				}
+			}
+	}
 	</script>
 </body>
 </html>
