restoran html dodat

--- a/WebShopREST/WebShopREST/WebContent/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/userProfile.html
@@ -51,7 +51,7 @@
                     <br>
                     <button id="changeBtn">Izmeni profil</button>
                 </div>
-                <div style="clear: both; margin-top: 200px;"><label style="color: grey; font-size: 15pt;" class="label">Da biste izmenili lozinku, idite na "Izmeni profil"</label></div>
+                <div style="clear: both; margin-top: 80px;"><label style="color: grey; font-size: 15pt;" class="label">Da biste izmenili lozinku, idite na "Izmeni profil"</label></div>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
     <script>
 		$(document).ready(function(){
 			$('#changeBtn').click(function(){
-				window.location.href='changeProfile.html';
+				window.location.href='updateProfile.html';
 			});
 			
 		});
