--- a/WebShopREST/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebShopREST/WebContent/index.html
@@ -58,9 +58,9 @@
 					<th>Logo</th>
 					<th onclick="sortTable(0)">Naziv</th>
 					<th onclick="sortTable(1)">Lokacija</th>
-					<th onclick="sortTable(2)">Tip</th>
+					<th>Tip</th>
 					<th onclick="sortTable(3)">Ocena</th>
-					<th onclick="sortTable(4)">Otvoren</th>
+					<th>Otvoren</th>
 				</tr>
 			</thead>
 
