--- a/WebShopREST/WebShopREST/WebContent/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/userProfile.html
@@ -59,7 +59,7 @@
     <script>
 		$(document).ready(function(){
 			$('#changeBtn').click(function(){
-				window.location.href='changeProfile.html';
+				window.location.href='updateProfile.html';
 			});
 			
 		});
