--- a/WebShopREST/WebShopREST/WebContent/register.html
+++ b/WebShopREST/WebShopREST/WebContent/register.html
@@ -15,7 +15,7 @@
             </div>
             <div class="data">
                 <label>Lozinka *</label>
-                <input type="password" required/>
+                <input type="password" value="aaaa" required/>
             </div>
             <div class="data">
                 <label>Ime *</label>
